# SatelliteBathymetry

./: .gitignore  .gitmodules  CMakeLists.txt  CPP_DEPENDENCIES.TXT  LICENSE  README.md  Sentinel2.py  active.py  copernicus_requests  main_requests.py  sentinel2_requests.py  test.py
.github/workflows/: coverage.yml
Essai/: API.py  Sentinel2.py  active.py  conftest.py  geojson_algos.py  shapely_test.py  test.py
Obsolete/: Guillaume.py  compare_bin.py  conftest.py  essai.py  main.py  main2.py  working.py
active/: acquire.py  calibrate.py  collect.py  main.py  mosaic.py  polygon.py  process.py
backup/: acquire.py  main.py
data/points/: 2022.05.30_201358.xyz  test.xyz
data/sat-imgs/R10m/: T20UPA_20220614T150731_AOT_10m.jp2
data/sat-imgs/R20m/: T20UPA_20220614T150731_AOT_20m.jp2  T20UPA_20220614T150731_SCL_20m.jp2  T20UPA_20220614T150731_WVP_20m.jp2
data/sat-imgs/R60m/: T20UPA_20220614T150731_AOT_60m.jp2  T20UPA_20220614T150731_B01_60m.jp2  T20UPA_20220614T150731_B02_60m.jp2  T20UPA_20220614T150731_B03_60m.jp2  T20UPA_20220614T150731_B04_60m.jp2  T20UPA_20220614T150731_B05_60m.jp2  T20UPA_20220614T150731_B06_60m.jp2  T20UPA_20220614T150731_B07_60m.jp2  (+7 more)
doc/: README.md
scripts/: get_rimouski_port_files.py  get_sentinel_imgs.py  pipeline.py  test.py
src/: Sentinel2.py  sentinel2.py
src/cpp/: DEPENDENCIES.TXT  applyMask2GetWater.cpp  build-opencv-with-jp2-support.txt  depth.cpp  processing_MNWI.cpp  visualize.cpp
src/python/: sentinel2_file_downloader.py  sentinel2_imgs_downloader.py
test/: README.md  conftest.py  test.py
(+1 files in other folders)
